# BioHarness

./: .gitignore  AGENTS.md  CITATION.cff  CODING_STANDARDS.md  CONTRIBUTING.md  LICENSE  Launch Bio-Harness.command  README.md  SECURITY.md  install.sh  pixi.toml  pyproject.toml  release_manifest.json  ui_v2_api.py
.github/workflows/: ci.yml  package-smoke.yml
apps/streamlit/: app.py
apps/web/: README.md  index.html  package-lock.json  package.json
benchmark_data/: README.md  bioagentbench_official_manifest.json  bioagentbench_supplemental_manifest.json  extended_30_case_benchmark_suite.json  extended_scientific_benchmark_suite.json
benchmark_data/comparative_genomics/: truth.json
benchmark_data/dge_pathway/: truth.json
benchmark_data/fast_signal_mini/: README.md  manifest.json
benchmark_data/manifests/: ablation_manifest_24.json
benchmark_data/metagenomics/: truth.json
benchmark_data/reference/: kegg_hsa_reference.json
benchmark_data/result_review_decision/: manifest.json
benchmark_data/variant_annotation/: truth.json
benchmark_data/viral_metagenomics/: truth.json
bio_harness/: __init__.py
bio_harness/agents/: execution_markers.py  orchestrator.py  orchestrator_interactive_context.py  orchestrator_parameter_patch.py  orchestrator_plan_helpers.py  orchestrator_sessions.py  orchestrator_shell_validation.py  orchestrator_skill_availability.py  orchestrator_skill_loading.py  orchestrator_skill_retrieval.py  orchestrator_validation_helpers.py
bio_harness/analysis/: figure_factory.py  harness_capabilities.py  manuscript_history.py  qwen_skill_coverage.py  qwen_skill_smoke.py
bio_harness/capabilities/: catalog.json  isolated_tool_recipes.json  scientific_tools.json
bio_harness/config/: model_catalog.json
bio_harness/core/: agent.py  analysis_spec.py  analysis_spec_data.py  analysis_spec_grounding.py  analysis_spec_seed.py  analysis_spec_seed_helpers.py  analysis_spec_support.py  artifact_inspectors.py  artifact_role_validator.py  artifact_roles.py  bash_placeholder_resolution.py  bash_single_operation_policy.py  bcftools_shell_semantics.py  benchmark_asset_integrity.py  benchmark_policy.py  bioagentbench_official.py  branch_stage_progress.py  capability_catalog.py  capability_graph.py  coding_standards_guard.py  constants.py  contract_inference_utils.py  contracts.py  cross_model_transfer_benchmark.py  curated_tool_batches.py  cystic_fibrosis_scaffold.py  de_wrapper_semantics.py  de_wrapper_semantics_support.py  direct_wrapper_argument_utils.py  direct_wrapper_completeness.py  direct_wrapper_input_bindings.py  domain_expansion_ablation.py  env_bootstrap.py  environment_bootstrap.py  error_diagnosis.py  execution_mode.py  execution_monitor_support.py  execution_policy.py  executor_runtime.py  extended_suite_ablation.py  (+121 more)
bio_harness/harness/: __init__.py  config.py  contract_artifact_utils.py  contract_fastq_utils.py  contract_group_tags.py  contract_prompt_capabilities.py  contract_prompt_intent.py  contract_reference_detection.py  contract_reference_fallback.py  contract_reference_indexing.py  contract_reference_utils.py  contract_utils.py  (+26 more)
docs/: EVALUATION_COMPLETED_CHECKLIST_20260501.md  FAST_SIGNAL_COMPLETION_PLAN_20260425.md  FAST_SIGNAL_FIXTURE_COVERAGE_20260430.md  FAST_SIGNAL_IMPLEMENTATION.md  FAST_SIGNAL_PLAN_SHAPE_CORPUS_DECISION_20260501.md  FAST_SIGNAL_SCORECARD_CUTOVER_POLICY_20260501.md  FAST_SIGNAL_SPEED_OPTIMIZATIONS.md  FAST_SIGNAL_TEST_LADDER_REFINED.md  PUBLIC_RELEASE_PACKAGING_CLEANUP_PLAN_20260501.md  QWEN36_POST_MINI_GATE_RESULTS_20260430.md  QWEN36_TESTING_CONTEXT_20260428.md  QWEN_CODER_SINGLE_MODEL_PAPER_SUMMARY_20260502.md  STANDARD_SKILL_FORMAT_MIGRATION_EVALUATION_20260707.md  STANDARD_SKILL_FORMAT_MIGRATION_PLAN_20260707.md  benchmark_evidence.md  bioagentbench_plan.md  fast_signal.md  installation.md  isolated_tools.md  packaging.md  release_inventory.md  setup_assistance.md  ui.md
requirements/: venv-core.txt
scripts/: README.md  __init__.py  audit_reference_bundle.py  bootstrap_bioharness.py  build_bioagentbench_scoreboard.py  build_run_report_bundle.py  check_llm_backend.py  check_resource_preflight.py  check_star_setup.py  compare_runs.py  configure_isolated_tools.py  create_comparative_genomics_benchmark.py  create_dge_pathway_benchmark.py  create_feature_benchmarks.py  create_germline_benchmark.py  create_long_read_benchmark.py  create_metabolomics_benchmark.py  create_metagenomics_benchmark.py  create_phylogenetics_benchmark.py  create_proteomics_benchmark.py  create_single_cell_benchmark.py  create_spatial_benchmark.py  create_variant_annotation_benchmark.py  create_viral_metagenomics_benchmark.py  doctor_bioharness.py  export_bioagentbench_runs_for_official_eval.py  export_manuscript_docx.py  export_run_ro_crate.py  export_workflow_exchange.py  extract_fast_signal_fixtures.py  fallback_skill_builder.py  fast_signal_scorecard.py  first_run_setup.py  generate_standard_skill_packages.py  materialize_reference_bundle.py  measure_fast_signal_prompt_sensitivity.py  onboard_novel_tool.py  prepare_bioagentbench_deseq.py  prepare_fast_signal_mini_benchmarks.py  profile_artifact_schema.py  (+70 more)
(+732 files in other folders)
