[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bio-harness"
version = "0.1.0"
description = "Local-first bioinformatics agentic harness"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Jared Richardson" },
]
keywords = [
  "bioinformatics",
  "agents",
  "local-first",
  "ollama",
  "benchmarking",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "biopython>=1.80",
  "duckduckgo-search>=5.1.0",
  "docling>=0.1.0",
  "fastapi>=0.115,<1",
  "gseapy>=1.1.3",
  "httpx>=0.28.1,<0.29",
  "langchain-community>=0.0.30",
  "langgraph",
  "matplotlib>=3.8",
  "mygene>=3.2.2",
  "numpy>=1.26",
  "ollama>=0.6.1",
  "pandas>=2.2",
  "psutil>=7.2.2,<8",
  "pydantic>=2.12.5,<3",
  "pydeseq2>=0.5.2",
  "pymupdf4llm>=0.0.2",
  "python-docx>=1.1.0",
  "python-frontmatter>=1.0.0",
  "graphviz>=0.14",
  "python-pptx>=1.0.2",
  "PyYAML>=6.0",
  "reportlab>=4.0.0",
  "scipy>=1.11",
  "semanticscholar>=0.2.0",
  "streamlit>=1.0.0",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6",
  "mypy>=1.14",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.13",
]

[project.urls]
Homepage = "https://github.com/jared-richardson/BioHarness"
Repository = "https://github.com/jared-richardson/BioHarness"
Issues = "https://github.com/jared-richardson/BioHarness/issues"
Documentation = "https://github.com/jared-richardson/BioHarness/tree/main/docs"

[project.scripts]
bio-harness-bootstrap = "scripts.bootstrap_bioharness:main"
bio-harness-first-run = "scripts.first_run_setup:main"
bio-harness-doctor = "scripts.doctor_bioharness:main"
bio-harness-configure-isolated-tools = "scripts.configure_isolated_tools:main"
bio-harness-run = "scripts.run_agent_e2e:main"
bio-harness-benchmark = "scripts.run_bioagentbench_official:main"
bio-harness-figure = "scripts.render_figure_spec:main"
bio-harness-schema = "scripts.profile_artifact_schema:main"
bio-harness-preflight = "scripts.check_resource_preflight:main"
bio-harness-compare = "scripts.compare_runs:main"
bio-harness-reference-audit = "scripts.audit_reference_bundle:main"
bio-harness-reference-build = "scripts.materialize_reference_bundle:main"
bio-harness-qwen-smoke = "scripts.run_qwen_skill_smoke_matrix:main"
bio-harness-export-docx = "scripts.export_manuscript_docx:main"
bio-harness-export-ro-crate = "scripts.export_run_ro_crate:main"
bio-harness-export-workflow = "scripts.export_workflow_exchange:main"
bio-harness-report = "scripts.build_run_report_bundle:main"

[tool.setuptools.packages.find]
include = ["bio_harness*", "scripts*"]

[tool.setuptools.package-data]
bio_harness = [
  "capabilities/*.json",
  "config/*.json",
  "harness/*.json",
  "pipeline_scripts/*.md",
  "skills/definitions/*.json",
  "skills/definitions/*.md",
  "skills/uncommon/*.json",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
  "live_data: tests that require network or live GEO/SRA data access",
  "unit: fast unit tests with no external dependencies",
  "integration: tests that require filesystem or process interaction",
  "slow: tests that take more than 5 seconds",
  "requires_ollama: tests that need a running Ollama server",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
  ".git",
  ".mypy_cache",
  ".pixi",
  ".pytest_cache",
  ".ruff_cache",
  ".tool-envs",
  ".venv",
  "build",
  "dist",
  "docs/node_modules",
  "release",
  "ui_v2/node_modules",
  "workspace",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "D",
  "E",
  "F",
  "I",
  "PIE",
  "RET",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "D100",
  "D104",
  "D105",
  "D107",
  "D203",
  "D213",
  "D401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]
"tests/core_cases/**/*.py" = ["D", "F403", "F405"]
"scripts/check_llm_backend.py" = ["E402"]
"scripts/run_agent_e2e_support.py" = ["E402", "F401"]
"bio_harness/harness/plan_helpers.py" = ["F401"]
"bio_harness/harness/plan_semantic_guards.py" = ["F403", "F405"]

[tool.coverage.run]
branch = true
source = ["bio_harness", "scripts", "ui_v2_api.py"]
omit = [
  "*/tests/*",
  "*/workspace/*",
  "*/release/*",
  "*/docs/*",
  "*/build/*",
  "*/dist/*",
  "*/.venv/*",
  "*/.pixi/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "pragma: no cover",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_unused_ignores = true
